fix: clear board stretch

--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,5 @@
 
 .game-box {
   display: flex;
+  align-items: flex-start;
 }
